Minor updates (take XV).

--- a/series/tr/organizasyonlar-ve-kariyer/20221004-devrel-01.md
+++ b/series/tr/organizasyonlar-ve-kariyer/20221004-devrel-01.md
@@ -1,6 +1,6 @@
 # DevRel (Developer Relations) Yolculuğum: Nasıl başladım? (1/2)
 
-[Kariyerimin 21. yılı](https://eser.ozvataf.com/cv/)ndayım. Kendimi Türkiye sınırları içerisinde "büyürken evinde bilgisayar olan, bu sayede yazılım teknolojisinin gelişmesine tanıklık etmiş ilk neslin az sayıda üyesinden biri" olarak tanımlıyorum (bkz: [90'larda programlama öğrenmek](/90-larda-programlama-ogrenmek)). Dolayısıyla şartlar ilgim ve isteğimle birleşince benim için doğal bir sonuç oldu. İkinci tercihim Bilim Kurgu Yazarı olmaktı, ama o zaman işim daha zor olurdu.
+[Kariyerimin 21. yılı](../../../curriculum-vitae/tr/README.md)ndayım. Kendimi Türkiye sınırları içerisinde "büyürken evinde bilgisayar olan, bu sayede yazılım teknolojisinin gelişmesine tanıklık etmiş ilk neslin az sayıda üyesinden biri" olarak tanımlıyorum (bkz: [90'larda programlama öğrenmek](/90-larda-programlama-ogrenmek)). Dolayısıyla şartlar ilgim ve isteğimle birleşince benim için doğal bir sonuç oldu. İkinci tercihim Bilim Kurgu Yazarı olmaktı, ama o zaman işim daha zor olurdu.
 
 
 ## Geçmiş
@@ -67,4 +67,4 @@ Potansiyel müşterim olabilecek şirketlere DevRel hakkında sunumlar hazırlam
 
 DevRel danışmanlığı için 3 firma ile bu esasta görüşmeler halindeydim ki; hali hazırda danışmanlık verdiğim Getir, agresif bir işe alım hedefi olduğunu, teknoloji kadrosunu global'de 1000 kişiye genişletmeyi planladıklarını ileterek benden bir çözüm beklediler. Elbette bu Getir büyüklüğünde "Getir'e dışarıdan destek verilerek" yapılabilecek bir sorumluluk değildi; ben de bu disiplini ülke sınırlarında ilk kez uygulayacak olma motivasyonuyla hiçbir detayla ilgilenmeden Getir'in "DevRel Director"u olmayı kabul ettim.
 
-Yazının devamı için: [DevRel (Developer Relations) Yolculuğum: DevRel Director Olmak](./devrel-02.md)
+Yazının devamı için: [DevRel (Developer Relations) Yolculuğum: DevRel Director Olmak](./20221005-devrel-02.md)
