--- a/series/tr/organizasyonlar-ve-kariyer/20221005-devrel-02.md
+++ b/series/tr/organizasyonlar-ve-kariyer/20221005-devrel-02.md
@@ -1,6 +1,6 @@
 # DevRel (Developer Relations) Yolculuğum: DevRel Director Olmak (2/2)
 
-Yazının öncülü olan [DevRel (Developer Relations) Yolculuğum: Nasıl başladım?](./devrel-01.md)'ı bu yazıdan önce okumanızı tavsiye ederim.
+Yazının öncülü olan [DevRel (Developer Relations) Yolculuğum: Nasıl başladım?](./20221004-devrel-01.md)'ı bu yazıdan önce okumanızı tavsiye ederim.
 
 Ayrıca önceden iliştirmem gereken bir diğer not; bu yazı serisinde mümkün olduğunca herhangi bir firmanın iç dinamiklerini açık etmeyeceğim. O nedenle bu kısım en fazla herhangi bir iş mülakatında geçmiş tecrübe olarak duyabileceğiniz kadar özet olacak.
 
@@ -59,6 +59,6 @@ Ekim 2022 itibariyle artık Getir'den ayrılmış bulunuyorum. Ama bundan sonra 
 
 Bu ay itibariyle direkt CTO ünvanıyla mühendislik yönetimine geri döndüğüm ancak DevRel alanındaki biriktirdiğim know-how'ı yine işime yansıttığım bir düzende ilerleyeceğim.
 
-Aynı zamanda burada anlattıklarımı belki [YouTube Yayınlarımda](https://youtube.com/EserOzvataf) tekrar ele alabilirim.
+Aynı zamanda burada anlattıklarımı belki [YouTube Yayınlarımda](https://eser.live) tekrar ele alabilirim.
 
 Sağlıcakla kalın,
