chore: deno fmt.

--- a/series/tr/eser-neyci/20230731-s01b02-cocukluk.md
+++ b/series/tr/eser-neyci/20230731-s01b02-cocukluk.md
@@ -1,13 +1,36 @@
 # **Sezon 1 Bölüm 2** Çocukluk
 
-Herkes için aynı şey yakıştırılmıştır ama gerçekten dikkati çok dağınık, eli kolu hareket etmeden duramayan, misafirliğe gittiğimde insanların yatak odalarına kadar girip eşyaları karıştıran, otomobile bindiğimde aracın içinde sigortaları söken, evdeki televizyon, video gibi elektronik eşyaları parçalarına ayıran, eline taş filan geçirdiğinde bunu sağa sola kontrolsüz fırlatan bir çocuktum.
+Herkes için aynı şey yakıştırılmıştır ama gerçekten dikkati çok dağınık, eli
+kolu hareket etmeden duramayan, misafirliğe gittiğimde insanların yatak
+odalarına kadar girip eşyaları karıştıran, otomobile bindiğimde aracın içinde
+sigortaları söken, evdeki televizyon, video gibi elektronik eşyaları parçalarına
+ayıran, eline taş filan geçirdiğinde bunu sağa sola kontrolsüz fırlatan bir
+çocuktum.
 
-Çok hızlı konuşmaya çalıştığım için konuşma zorluğum vardı. Teyzem dahil herkes “Eser hadi şunu söyle” diyip “portakal, ağaç” gibi benim zor telafuz edebildiğim kelimeleri bana söyletmeye çalışıp, söyleyemediğimde dalga geçiyorlardı. Bana yapılan zorbalıklara dayanamayıp daha da sinirli bir çocuk oldum.
+Çok hızlı konuşmaya çalıştığım için konuşma zorluğum vardı. Teyzem dahil herkes
+“Eser hadi şunu söyle” diyip “portakal, ağaç” gibi benim zor telafuz edebildiğim
+kelimeleri bana söyletmeye çalışıp, söyleyemediğimde dalga geçiyorlardı. Bana
+yapılan zorbalıklara dayanamayıp daha da sinirli bir çocuk oldum.
 
-Bir süre sonra asilik karakterim haline geldi. İnsanlar bana bağırıp çağırıyordu, ama önemli değildi. Kriz geçince ben yine kendi bildiğimi okuyordum. Ancak bir gün misafirlikten dönerken annem artık arkadaşlarının benim hakkımda söyledikleri iğneli laflara dayanamayana kadar da hiçbir şey umrumda değildi. Kendini yetersiz bir anne olarak hissetmiş olacak, o çevresinin zorbalığını yaşıyordu “iyi çocuk yetiştiremedin” diye. O gün bana trip atıp durdu “git başımdan” diye. Ben bir an gidip ona sarıldım, üzülmesini istemiyordum. Onu üzenin arkadaşları değil de ben olduğumu bana söylediğinde şok olmuştum, hayatımdaki ilk empatimi yaptım sanırım.
+Bir süre sonra asilik karakterim haline geldi. İnsanlar bana bağırıp
+çağırıyordu, ama önemli değildi. Kriz geçince ben yine kendi bildiğimi
+okuyordum. Ancak bir gün misafirlikten dönerken annem artık arkadaşlarının benim
+hakkımda söyledikleri iğneli laflara dayanamayana kadar da hiçbir şey umrumda
+değildi. Kendini yetersiz bir anne olarak hissetmiş olacak, o çevresinin
+zorbalığını yaşıyordu “iyi çocuk yetiştiremedin” diye. O gün bana trip atıp
+durdu “git başımdan” diye. Ben bir an gidip ona sarıldım, üzülmesini
+istemiyordum. Onu üzenin arkadaşları değil de ben olduğumu bana söylediğinde şok
+olmuştum, hayatımdaki ilk empatimi yaptım sanırım.
 
-Sonra uslu bir çocuk olma yemini verdim kendi kendime. Bu ise çok sıkılgan olmama neden oldu. Kitaplar, çizgi romanlar, ansiklopediler, bilmeceler, rubik küpler, diziler, müzik, bisiklet, futbol, basketbol vb. çevremde ne varsa kendimi oyalamaya çalışıyorum.
+Sonra uslu bir çocuk olma yemini verdim kendi kendime. Bu ise çok sıkılgan
+olmama neden oldu. Kitaplar, çizgi romanlar, ansiklopediler, bilmeceler, rubik
+küpler, diziler, müzik, bisiklet, futbol, basketbol vb. çevremde ne varsa
+kendimi oyalamaya çalışıyorum.
 
-Okulda öğretmenler ders anlatırken hareket edemediğim için canım sıkılır, duvarları izlerdim. Bunun için çok kez okula ailemi çağırıp şikayet ettiler ve sınıf arkadaşlarımın içinde dalga geçtiler.
+Okulda öğretmenler ders anlatırken hareket edemediğim için canım sıkılır,
+duvarları izlerdim. Bunun için çok kez okula ailemi çağırıp şikayet ettiler ve
+sınıf arkadaşlarımın içinde dalga geçtiler.
 
-Zaten 8 tane okul değiştirdim liseye gelene kadar. Derslerimde hiç başarılı olamadım. Temelim hep eksik kaldı. Tam adapte oluyordum, tekrar taşınıyorduk, okul değiştiriyordum. Tekrardan bir çevrem oluyordu.
+Zaten 8 tane okul değiştirdim liseye gelene kadar. Derslerimde hiç başarılı
+olamadım. Temelim hep eksik kaldı. Tam adapte oluyordum, tekrar taşınıyorduk,
+okul değiştiriyordum. Tekrardan bir çevrem oluyordu.
