--- a/series/tr/organizasyonlar-ve-kariyer/20221005-devrel-02.md
+++ b/series/tr/organizasyonlar-ve-kariyer/20221005-devrel-02.md
@@ -1,64 +1,111 @@
 # DevRel (Developer Relations) Yolculuğum: DevRel Director Olmak (2/2)
 
-Yazının öncülü olan [DevRel (Developer Relations) Yolculuğum: Nasıl başladım?](./20221004-devrel-01.md)’ı bu yazıdan önce okumanızı tavsiye ederim.
+Yazının öncülü olan
+[DevRel (Developer Relations) Yolculuğum: Nasıl başladım?](./20221004-devrel-01.md)’ı
+bu yazıdan önce okumanızı tavsiye ederim.
 
-Ayrıca önceden iliştirmem gereken bir diğer not; bu yazı serisinde mümkün olduğunca herhangi bir firmanın iç dinamiklerini açık etmeyeceğim. O nedenle bu kısım en fazla herhangi bir iş mülakatında geçmiş tecrübe olarak duyabileceğiniz kadar özet olacak.
-
+Ayrıca önceden iliştirmem gereken bir diğer not; bu yazı serisinde mümkün
+olduğunca herhangi bir firmanın iç dinamiklerini açık etmeyeceğim. O nedenle bu
+kısım en fazla herhangi bir iş mülakatında geçmiş tecrübe olarak duyabileceğiniz
+kadar özet olacak.
 
 ## DevRel Nedir?
 
-DevRel, şemsiyesinin altına birçok farklı disiplini alan çatı bir terim olduğu için tek bir işlev tanımlamak yerine şemsiye altında gerçekleşen faaliyetlerle tanımlamanın daha doğru olduğu bir disiplindir.
+DevRel, şemsiyesinin altına birçok farklı disiplini alan çatı bir terim olduğu
+için tek bir işlev tanımlamak yerine şemsiye altında gerçekleşen faaliyetlerle
+tanımlamanın daha doğru olduğu bir disiplindir.
 
-Ama illa bir tanım gerekiyorsa; “DevRel, bir organizasyonun ve geliştiricilerin karşılıklı faydalarına hizmet etmesi için, strateji ve taktikler hazırlayan organizasyon işlevidir” diyebiliriz.
+Ama illa bir tanım gerekiyorsa; “DevRel, bir organizasyonun ve geliştiricilerin
+karşılıklı faydalarına hizmet etmesi için, strateji ve taktikler hazırlayan
+organizasyon işlevidir” diyebiliriz.
 
-Kavramsal ifadeler yeterince akıl karıştırdıysa, bu noktada bir es verip konuyu örnekleyerek anlatmak isterim. “Halkla ilişkiler” nasıl “müşteri memnuniyeti”nden tutalım “kriz yönetimine” kadar içine birçok işlevi alabiliyorsa; “Geliştiricilerle ilişkiler” anlamına gelen “DevRel” de benzer bir şekilde oldukça kapsayıcı bir terim.
+Kavramsal ifadeler yeterince akıl karıştırdıysa, bu noktada bir es verip konuyu
+örnekleyerek anlatmak isterim. “Halkla ilişkiler” nasıl “müşteri
+memnuniyeti”nden tutalım “kriz yönetimine” kadar içine birçok işlevi
+alabiliyorsa; “Geliştiricilerle ilişkiler” anlamına gelen “DevRel” de benzer bir
+şekilde oldukça kapsayıcı bir terim.
 
 Şunları tanımlamak gerekiyor:
+
 - DevRel hangi kurum çatısı altında faaliyet gösteriyor?
 - Bu kurum geliştiriciler ile nasıl bir ilişki içerisinde?
-- Bu kurumun geliştiricilerle ortak paylaştığı alanlarda nasıl stratejileri ve hedefleri bulunuyor?
+- Bu kurumun geliştiricilerle ortak paylaştığı alanlarda nasıl stratejileri ve
+  hedefleri bulunuyor?
 
-Dolayısıyla bugün AWS, Google, Microsoft v.b. firmaların DevRel’leri son kullanıcıları geliştiriciler olan ürünlerin, platformların ve araçların pazarlamalarında da etkin rol oynarken; bazı DevRel’lerin ne yaptığı konusunda hiçbir fikriniz olmayabilir.
-
+Dolayısıyla bugün AWS, Google, Microsoft v.b. firmaların DevRel’leri son
+kullanıcıları geliştiriciler olan ürünlerin, platformların ve araçların
+pazarlamalarında da etkin rol oynarken; bazı DevRel’lerin ne yaptığı konusunda
+hiçbir fikriniz olmayabilir.
 
 ## Getir’de DevRel ne yapıyor? Ben ne yaptım?
 
-Getir’de benim pozisyonum “DevRel Director” idi. Bu CTO’ya rapor eden bir yönetici pozisyonu olarak tasarlandı. Daha önce emsali olmayan bir tanım ile başladığımız için önce kitleyi ve hedefleri belirleyip konuştuk.
+Getir’de benim pozisyonum “DevRel Director” idi. Bu CTO’ya rapor eden bir
+yönetici pozisyonu olarak tasarlandı. Daha önce emsali olmayan bir tanım ile
+başladığımız için önce kitleyi ve hedefleri belirleyip konuştuk.
 
-O günkü hedef geliştirici kitlesi içeride yer alması planlanan, global ölçekte 1000 kişiyi bulması düşünülen teknoloji departmanındaki ve teknoloji departmanına katılmasını isteyebileceğimiz potansiyel insanlardı. Hızlı scale-up etmiş, iletişim dili ingilizce olan, 4 farklı tech-hub’ı olan, global bir teknoloji departmanında;
+O günkü hedef geliştirici kitlesi içeride yer alması planlanan, global ölçekte
+1000 kişiyi bulması düşünülen teknoloji departmanındaki ve teknoloji
+departmanına katılmasını isteyebileceğimiz potansiyel insanlardı. Hızlı scale-up
+etmiş, iletişim dili ingilizce olan, 4 farklı tech-hub’ı olan, global bir
+teknoloji departmanında;
 
 - Çalışan deneyimini arttırmak,
-- İnsanların firmanın mühendislik kültürünü tanımasını ve bu kültürün bir parçası olması istemesini sağlamak,
-- İyi mühendislik pratiklerinin benimsenmesini, konuşulmasını ve adaptasyonunu sağlamak,
-- Çalışanların potansiyelini gerçekleştirebilmesini sağlayabilecek alanlar tanımlamak,
-- Yöneticilere ve diğer departmanlara mühendislik kitlesi ile ilgili insight/içgörüler paylaşmak,
+- İnsanların firmanın mühendislik kültürünü tanımasını ve bu kültürün bir
+  parçası olması istemesini sağlamak,
+- İyi mühendislik pratiklerinin benimsenmesini, konuşulmasını ve adaptasyonunu
+  sağlamak,
+- Çalışanların potansiyelini gerçekleştirebilmesini sağlayabilecek alanlar
+  tanımlamak,
+- Yöneticilere ve diğer departmanlara mühendislik kitlesi ile ilgili
+  insight/içgörüler paylaşmak,
 
-gibi stratejik hedefler bulunuyordu. Bu hedeflere de Technical Writer’dan tutalım, Community Manager’a, hatta Open Source Developer’a uzanan çeşitli bir şapkaların bulunduğu bir takım kurarak ilerlenilebilecek bir yol haritası çıkartarak koşacaktık.
+gibi stratejik hedefler bulunuyordu. Bu hedeflere de Technical Writer’dan
+tutalım, Community Manager’a, hatta Open Source Developer’a uzanan çeşitli bir
+şapkaların bulunduğu bir takım kurarak ilerlenilebilecek bir yol haritası
+çıkartarak koşacaktık.
 
-Kısacası DevRel Director tek tabanca “DevRel” olmak için değil, aslında firma çatısı altında bir Developer Relations perspektifi kazandırmak ve stratejiler belirlemek, bunu da birden fazla DevRel pozisyonuyla yapmak gibi konumlanmıştı.
+Kısacası DevRel Director tek tabanca “DevRel” olmak için değil, aslında firma
+çatısı altında bir Developer Relations perspektifi kazandırmak ve stratejiler
+belirlemek, bunu da birden fazla DevRel pozisyonuyla yapmak gibi konumlanmıştı.
 
-10 aylık süre içerisinde sağlanan çalışmalardan açık olarak yazabileceklerimden bazıları:
+10 aylık süre içerisinde sağlanan çalışmalardan açık olarak yazabileceklerimden
+bazıları:
+
 - 3 bootcamp tamamlandı, 14 kişi ekibe kazandırıldı
 - Dış etkinliklerde konuşmalar yapıldı
 - May 4th Star Wars günü kutlanmaya başlandı
-- Getir Tech Talks ismiyle teknik konuşmaların olduğu bir etkinlik serisi başladı
+- Getir Tech Talks ismiyle teknik konuşmaların olduğu bir etkinlik serisi
+  başladı
 - Hiring süreçleri ile ilgili iyileştirmeler üzerine çalışıldı
 - Onboarding süreçleri ile ilgili iyileştirmeler üzerine çalışıldı
-- Teknoloji departmanındaki roller için “gözlem-tabanlı” kariyer yolları oluşturuldu
+- Teknoloji departmanındaki roller için “gözlem-tabanlı” kariyer yolları
+  oluşturuldu
 - Uzun süre aynı görevde kalan kişiler için Internal Mobility Policy düzenlendi
-- Teknoloji-Data-Product ekiplerinin squadlardan beklentilerini netleştirmek üzere “Maturity Matrix” çalışması ele alındı
+- Teknoloji-Data-Product ekiplerinin squadlardan beklentilerini netleştirmek
+  üzere “Maturity Matrix” çalışması ele alındı
 
-Bu süreç içinde DevRel’liğin yanı sıra Agile Office’ın da sorumluluğunu alarak ilerlediğim, çok şey öğrendiğim ve özveriyle çalıştığım keyifli bir süreç geçirdim. Aynı süreç içerisinde firmanın decacorn olması gibi göğsümüzü kabartan gelişmeler de yaşadık, pandemideki yasal kısıtlamalar nedeniyle ofise gidemediğimiz de oldu.
-
+Bu süreç içinde DevRel’liğin yanı sıra Agile Office’ın da sorumluluğunu alarak
+ilerlediğim, çok şey öğrendiğim ve özveriyle çalıştığım keyifli bir süreç
+geçirdim. Aynı süreç içerisinde firmanın decacorn olması gibi göğsümüzü kabartan
+gelişmeler de yaşadık, pandemideki yasal kısıtlamalar nedeniyle ofise
+gidemediğimiz de oldu.
 
 ## Bundan sonra nasıl ilerliyorum?
 
-Yazının önceki bölümünde DevRel’in nereyse her kurumda olması gereken bir “bakış” olduğunu savunduğumu, bu perspektifi de zaten birfiil mühendislik yöneticisi kimliğim ile oluşturup daha sonra konsantre bir danışmanlığa evirdiğimi anlatmıştım.
+Yazının önceki bölümünde DevRel’in nereyse her kurumda olması gereken bir
+“bakış” olduğunu savunduğumu, bu perspektifi de zaten birfiil mühendislik
+yöneticisi kimliğim ile oluşturup daha sonra konsantre bir danışmanlığa
+evirdiğimi anlatmıştım.
 
-Ekim 2022 itibariyle artık Getir’den ayrılmış bulunuyorum. Ama bundan sonra DevRel Director görevinde olmamam DevRel disiplinine yaptığım yatırımı yok etmediği gibi; bu alanda halen bir şeyler üretmeme engel de değil.
+Ekim 2022 itibariyle artık Getir’den ayrılmış bulunuyorum. Ama bundan sonra
+DevRel Director görevinde olmamam DevRel disiplinine yaptığım yatırımı yok
+etmediği gibi; bu alanda halen bir şeyler üretmeme engel de değil.
 
-Bu ay itibariyle direkt CTO ünvanıyla mühendislik yönetimine geri döndüğüm ancak DevRel alanındaki biriktirdiğim know-how’ı yine işime yansıttığım bir düzende ilerleyeceğim.
+Bu ay itibariyle direkt CTO ünvanıyla mühendislik yönetimine geri döndüğüm ancak
+DevRel alanındaki biriktirdiğim know-how’ı yine işime yansıttığım bir düzende
+ilerleyeceğim.
 
-Aynı zamanda burada anlattıklarımı belki [YouTube Yayınlarımda](https://eser.live) tekrar ele alabilirim.
+Aynı zamanda burada anlattıklarımı belki
+[YouTube Yayınlarımda](https://eser.live) tekrar ele alabilirim.
 
 Sağlıcakla kalın,
