--- a/series/tr/organizasyonlar-ve-kariyer/20221008-shu-ha-ri.md
+++ b/series/tr/organizasyonlar-ve-kariyer/20221008-shu-ha-ri.md
@@ -1,55 +1,133 @@
 # Shu Ha Ri, Empiricism, Kaizen, Inspect & Adapt: Disiplin Öğrenme Yolculuğumuz
 
-Başlıklarda bir “yolculuğumuz” teması tutturdum gidiyorum, farkındayım. Çünkü “süreç” kelimesinin “katlanılması gereken bir dönem” gibi bir alt okuması, yolculuk kelimesinin ise içinde öğrenimi ve benimsemeyi barındırdığını düşünüyorum. Bu nedenle bu dönem yolculuk kelimesini çokça kullanmış olabilirim.
+Başlıklarda bir “yolculuğumuz” teması tutturdum gidiyorum, farkındayım. Çünkü
+“süreç” kelimesinin “katlanılması gereken bir dönem” gibi bir alt okuması,
+yolculuk kelimesinin ise içinde öğrenimi ve benimsemeyi barındırdığını
+düşünüyorum. Bu nedenle bu dönem yolculuk kelimesini çokça kullanmış olabilirim.
 
-Her ne kadar bana Twitter’da rastlayanlar bilfiil kod yazdığımı düşünüyor olsalar da, son 10 yıldır profesyonel olarak yazılımın daha çok “soft skill”i yüksek taraflarında çalışıyorum. Bunu yaparken de mevcut yazılım organizasyonlarını, ekiplerini bir başlangıç noktasından hedeflenen “daha olgun” bir noktaya taşımak için belirli stratejik / taktik müdahalelerde bulunmam gerekebiliyor.
+Her ne kadar bana Twitter’da rastlayanlar bilfiil kod yazdığımı düşünüyor
+olsalar da, son 10 yıldır profesyonel olarak yazılımın daha çok “soft skill”i
+yüksek taraflarında çalışıyorum. Bunu yaparken de mevcut yazılım
+organizasyonlarını, ekiplerini bir başlangıç noktasından hedeflenen “daha olgun”
+bir noktaya taşımak için belirli stratejik / taktik müdahalelerde bulunmam
+gerekebiliyor.
 
-“Durumsal liderlik”i içselleştirdiyseniz, bu müdahalelerin ekibin yapısı, takım kimliği, farkındalığı v.b. etkenlere göre değişkenlik arz edebileceğini; “dünden daha iyi” bir noktaya giderken bazen otokratik, bazen demokratik, bazen laissez faire karar alan bir liderlik sergilemeniz gerektiğini bilirsiniz. Ben de bu hareket tarzını benimsiyorum.
+“Durumsal liderlik”i içselleştirdiyseniz, bu müdahalelerin ekibin yapısı, takım
+kimliği, farkındalığı v.b. etkenlere göre değişkenlik arz edebileceğini; “dünden
+daha iyi” bir noktaya giderken bazen otokratik, bazen demokratik, bazen laissez
+faire karar alan bir liderlik sergilemeniz gerektiğini bilirsiniz. Ben de bu
+hareket tarzını benimsiyorum.
 
-Ancak “karar alma” bazen işin “en basit” noktası olabiliyor. Bu nedenle bu yazının odak noktası daha çok “kararı uygulamak”la ilgili olacak.
+Ancak “karar alma” bazen işin “en basit” noktası olabiliyor. Bu nedenle bu
+yazının odak noktası daha çok “kararı uygulamak”la ilgili olacak.
 
 ---
 
-Medyanın ağzına sakız ettiği Z jenerasyonu, benim de mensup olduğum öncül’ü millenial jenerasyonuna göre birkaç farklı davranış kümesine sahip -ki bu doğal bir durum-.
+Medyanın ağzına sakız ettiği Z jenerasyonu, benim de mensup olduğum öncül’ü
+millenial jenerasyonuna göre birkaç farklı davranış kümesine sahip -ki bu doğal
+bir durum-.
 
-“Benim naçizane deneyimlerimce” millenial’lar kendi öğrenme yolculuklarında kendi öncüllerinden devraldıkları “usta’yı izlemek” veya kaynak yoksunluğunda son çare olarak “inspect & adapt” (gözlemle ve adapte ol) yaklaşımlarına daha yatkınken, Z jenerasyonunda fikirlerle zaman kaybetmeden önce o fikirlerin işe yarayacağına dair “kuşkucu” bir yaklaşım benimseniyor. Elbette tam tersi şekilde milleniallar içinde kuşkucular, Z jenerasyonu içinde takipçiler de var, ancak ben gözlemlerim temelinde çoğunluğun davranışını ele alıyorum.
+“Benim naçizane deneyimlerimce” millenial’lar kendi öğrenme yolculuklarında
+kendi öncüllerinden devraldıkları “usta’yı izlemek” veya kaynak yoksunluğunda
+son çare olarak “inspect & adapt” (gözlemle ve adapte ol) yaklaşımlarına daha
+yatkınken, Z jenerasyonunda fikirlerle zaman kaybetmeden önce o fikirlerin işe
+yarayacağına dair “kuşkucu” bir yaklaşım benimseniyor. Elbette tam tersi şekilde
+milleniallar içinde kuşkucular, Z jenerasyonu içinde takipçiler de var, ancak
+ben gözlemlerim temelinde çoğunluğun davranışını ele alıyorum.
 
-Bu kuşkucu tutumla karşılaştığımızda, “tatmin” etmek için iyi bir hitabet, örnekler ve rasyonelite sunmak neredeyse şart. Ancak takdir edersiniz ki, bunun için her zaman “zaman bulmak” büyük bir sorun ve zaman olsa dahi “operasyonel” konuların sürekliliği gerekirken antik yunan dönemi filozofları gibi argümanlarla uzun uzun tartışmak pek pragmatik/yararcı olmuyor.
+Bu kuşkucu tutumla karşılaştığımızda, “tatmin” etmek için iyi bir hitabet,
+örnekler ve rasyonelite sunmak neredeyse şart. Ancak takdir edersiniz ki, bunun
+için her zaman “zaman bulmak” büyük bir sorun ve zaman olsa dahi “operasyonel”
+konuların sürekliliği gerekirken antik yunan dönemi filozofları gibi
+argümanlarla uzun uzun tartışmak pek pragmatik/yararcı olmuyor.
 
 ---
 
-Karşımızdaki sınav bu olduğunda; scrum çerçevesi, kuşkuculuğun kanıt-tabanlı yapısını kucaklayarak empiricism/deneyselcilik-tecrübecilik’i öne sürüyor. Ve özetle diyor ki; dene, bir şeyler yanlış gidiyorsa yeni bir şey denersin. Yani kaizen’den aldığı esinlenme ile bizi bir “inspect & adapt” yöntemine sürüklüyor. İşin çok felsefesine girmek istemesem de, “bilemeyeceğin” bir kavrama karşı belirsizliği yok etmenin en iyi silahın “bilinmezliği ortadan kaldırmanın” olduğu düşüncesi oldukça baskın Scrum’da. Ve ben de bunu günlük hayatımda bir ilke olarak kullanıyorum. Ancak “bir şey öğrenme yolculuğu”nda bu prensip bence biraz eksik kalıyor.
+Karşımızdaki sınav bu olduğunda; scrum çerçevesi, kuşkuculuğun kanıt-tabanlı
+yapısını kucaklayarak empiricism/deneyselcilik-tecrübecilik’i öne sürüyor. Ve
+özetle diyor ki; dene, bir şeyler yanlış gidiyorsa yeni bir şey denersin. Yani
+kaizen’den aldığı esinlenme ile bizi bir “inspect & adapt” yöntemine sürüklüyor.
+İşin çok felsefesine girmek istemesem de, “bilemeyeceğin” bir kavrama karşı
+belirsizliği yok etmenin en iyi silahın “bilinmezliği ortadan kaldırmanın”
+olduğu düşüncesi oldukça baskın Scrum’da. Ve ben de bunu günlük hayatımda bir
+ilke olarak kullanıyorum. Ancak “bir şey öğrenme yolculuğu”nda bu prensip bence
+biraz eksik kalıyor.
 
-Naçizane, empiricism’in uzun soluklu bir öğrenme yolculuğunda mindset/düşünce yapısı olarak bizi yanlış yönlendirebileceğini düşünüyorum. Nedeni ise şu: empiricism’de “deney süresi”ne dair bir yönlendirmeye ulaşamıyoruz. Elbette bu yaklaşımın bir zaafı değil, yalnızca bana “öğrenmeye” uygulamaya uygun olmadığını düşündürüyor. Örneklendireyim: hiçbir müzik bilginizin olmadığını varsayalım, elinize gitar’ı aldıktan sonra gitar’ın sizin çalmanız için uygun bir enstrüman olmadığı yargısına ne zaman varabilirsiniz?
+Naçizane, empiricism’in uzun soluklu bir öğrenme yolculuğunda mindset/düşünce
+yapısı olarak bizi yanlış yönlendirebileceğini düşünüyorum. Nedeni ise şu:
+empiricism’de “deney süresi”ne dair bir yönlendirmeye ulaşamıyoruz. Elbette bu
+yaklaşımın bir zaafı değil, yalnızca bana “öğrenmeye” uygulamaya uygun
+olmadığını düşündürüyor. Örneklendireyim: hiçbir müzik bilginizin olmadığını
+varsayalım, elinize gitar’ı aldıktan sonra gitar’ın sizin çalmanız için uygun
+bir enstrüman olmadığı yargısına ne zaman varabilirsiniz?
 
 ---
 
-Bu noktada yine uzak doğudan ithal “Shu Ha Ri”den bahsetmenin sırası geldi. Kapak fotoğrafında biraz ipucunu verdiğim üzere Shu Ha Ri’nin Aikido gibi savaş sanatları ile bir bağlantısı var. Bizler için bir disiplini ustasından öğrenip ustalaşma yolculuğunu tanımlar.
+Bu noktada yine uzak doğudan ithal “Shu Ha Ri”den bahsetmenin sırası geldi.
+Kapak fotoğrafında biraz ipucunu verdiğim üzere Shu Ha Ri’nin Aikido gibi savaş
+sanatları ile bir bağlantısı var. Bizler için bir disiplini ustasından öğrenip
+ustalaşma yolculuğunu tanımlar.
 
-**Shu**: Usta’nın sana öğrettiklerini değiştirmeden uygula  
-**Ha**: Uyguladıklarının arkasındaki fikri ve felsefeyi anlamaya ve içelleştirmeye çalış  
-**Ri**: Ezbere yaptıklarından kurtul, ilgili fikir ve felsefe çerçevesinde kendi yolunu bul  
+**Shu**: Usta’nın sana öğrettiklerini değiştirmeden uygula\
+**Ha**: Uyguladıklarının arkasındaki fikri ve felsefeyi anlamaya ve
+içelleştirmeye çalış\
+**Ri**: Ezbere yaptıklarından kurtul, ilgili fikir ve felsefe çerçevesinde kendi
+yolunu bul
 
-Ben elbette bunu çekip çıkarmış bir sektör dahisi değilim, Alistair Cockburn ve Martin Fowler gibi isimlerden beslenerek sizlere bu yazıyı ulaştırabiliyorum.
+Ben elbette bunu çekip çıkarmış bir sektör dahisi değilim, Alistair Cockburn ve
+Martin Fowler gibi isimlerden beslenerek sizlere bu yazıyı ulaştırabiliyorum.
 
-Ancak tabii bunun üzerine koyabileceğim kendi deneyimlerim de var. Yukarıda bahsettiğim gibi “dünden daha iyi bir noktaya ulaşma” hedefiyle yola çıkılan ekiplerde, kuşkucuların her zaman “bu bizde çalışmaz”, “biz bunu denedik olmadı”, “ya bunu eleştiren şöyle şöyle bir blog yazısı var”, “kural koymak otonomiyi öldürüyor” v.b. argümanlarla çokça baştan “yapmayalım” mindset/düşünce yapısı içinde olması durumunu yaşadım.
+Ancak tabii bunun üzerine koyabileceğim kendi deneyimlerim de var. Yukarıda
+bahsettiğim gibi “dünden daha iyi bir noktaya ulaşma” hedefiyle yola çıkılan
+ekiplerde, kuşkucuların her zaman “bu bizde çalışmaz”, “biz bunu denedik
+olmadı”, “ya bunu eleştiren şöyle şöyle bir blog yazısı var”, “kural koymak
+otonomiyi öldürüyor” v.b. argümanlarla çokça baştan “yapmayalım” mindset/düşünce
+yapısı içinde olması durumunu yaşadım.
 
-Bilhassa sektörde “best practice” olarak benimsenen konuların neden “genelde başarılı” olup sanki diğer ekiplerin “özel durumları” yokmuşçasına yalnızca o ekip için “özel durumlar nedeniyle uygulanamayacağı” fikrinin çok geçersiz olması bir yana dursun; “peki bu yöntemi kullanmayalım, ama bir yöntem kullanmalıyız değil mi? yerine ne kullanalım?” sorusunun da yanıtsız kaldığını, dolayısıyla kuşkucuların aslında “literatüre hakim olmadan” peşinen olumsuz yaklaştığı maalesef genel-geçer bir durum.
+Bilhassa sektörde “best practice” olarak benimsenen konuların neden “genelde
+başarılı” olup sanki diğer ekiplerin “özel durumları” yokmuşçasına yalnızca o
+ekip için “özel durumlar nedeniyle uygulanamayacağı” fikrinin çok geçersiz
+olması bir yana dursun; “peki bu yöntemi kullanmayalım, ama bir yöntem
+kullanmalıyız değil mi? yerine ne kullanalım?” sorusunun da yanıtsız kaldığını,
+dolayısıyla kuşkucuların aslında “literatüre hakim olmadan” peşinen olumsuz
+yaklaştığı maalesef genel-geçer bir durum.
 
-Başka bir örnek de; kavramları kendi silahıyla vurduğunu düşünen kimselerden gelsin. Yazılım alanında senior seviyede olsalar da çok arkadaşımdan “madem Scrum otonom takımlar destekliyor o zaman neden daily yapmak zorundayız” gibi sorular çok aldım. Her seferinde “aslında zorunda değilsin ama bunu tartacak ve doğaçlayacak olgunlukta bir ekipten mi bahsediyoruz?...” gibi sorgulamalara girsem de kendi bildiklerini okuduklarını; insanların genelde merdivenleri adım adım çıkmak yerine 5-6 basamak birden çıkmaya çalışırken kayıp düştüklerine şahit oldum.
+Başka bir örnek de; kavramları kendi silahıyla vurduğunu düşünen kimselerden
+gelsin. Yazılım alanında senior seviyede olsalar da çok arkadaşımdan “madem
+Scrum otonom takımlar destekliyor o zaman neden daily yapmak zorundayız” gibi
+sorular çok aldım. Her seferinde “aslında zorunda değilsin ama bunu tartacak ve
+doğaçlayacak olgunlukta bir ekipten mi bahsediyoruz?...” gibi sorgulamalara
+girsem de kendi bildiklerini okuduklarını; insanların genelde merdivenleri adım
+adım çıkmak yerine 5-6 basamak birden çıkmaya çalışırken kayıp düştüklerine
+şahit oldum.
 
 Peki Shu Ha Ri felsefi olarak ne diyor?
 
-Aslında diyor ki: “sürecin mantığını yargılamayı” ve “sonuç çıkacak mı diye kaygılanmayı” geride bırak, beyninin şalterini indir. Önündeki kuralları büyük bir disiplin ile uygula. Ardından disiplinin hayatına getirdiği iyi ve kötü deneyimleri gözlemle.
+Aslında diyor ki: “sürecin mantığını yargılamayı” ve “sonuç çıkacak mı diye
+kaygılanmayı” geride bırak, beyninin şalterini indir. Önündeki kuralları büyük
+bir disiplin ile uygula. Ardından disiplinin hayatına getirdiği iyi ve kötü
+deneyimleri gözlemle.
 
-Bu deneyimleri yaşamanı sağlayan yöntemler aslında bu kuralların en başında neyi sağlamak, ve bir önceki çalışma pratiklerinde neyin eksik olduğunu da sana gösterecek. Hali hazırda hayatında olmayan bir etken için önceden hesaplama yapmak çok da mümkün değil.
+Bu deneyimleri yaşamanı sağlayan yöntemler aslında bu kuralların en başında neyi
+sağlamak, ve bir önceki çalışma pratiklerinde neyin eksik olduğunu da sana
+gösterecek. Hali hazırda hayatında olmayan bir etken için önceden hesaplama
+yapmak çok da mümkün değil.
 
-Ancak uyguladığın disiplini tam anlamıyla yapabilir ve sonuçlarını toplayabilir hale geldiğinde artık kuralları yıkmaya hazır olursun...
+Ancak uyguladığın disiplini tam anlamıyla yapabilir ve sonuçlarını toplayabilir
+hale geldiğinde artık kuralları yıkmaya hazır olursun...
 
-Yine gitar örneğine geri dönmemiz gerekirse, parmak egzersizlerini yapmadan, enstrümanı nasıl tutman gerektiğini bilmeden, doğru akorları basmadan kalkıp diğer virtüözlerden farklılaşacak bir “keşif”te bulunman hiç olası değil...
+Yine gitar örneğine geri dönmemiz gerekirse, parmak egzersizlerini yapmadan,
+enstrümanı nasıl tutman gerektiğini bilmeden, doğru akorları basmadan kalkıp
+diğer virtüözlerden farklılaşacak bir “keşif”te bulunman hiç olası değil...
 
 ---
 
-90’larda büyüyen neslin “ustaya” daha fazla saygı duyması, ancak cep telefonlarının icadıyla hızlanan yaşamımız, hayat kaygılarımız, internet’in yaygın kullanımı bilginin kişilerin tekelinde olmaması gibi etkenlerin tümü toplanarak bize ve bizden sonraki nesillere “aceleci” bir dünyayı empoze etti. Bu nedenle “Shu Ha Ri”nin önerdiği ustalaşma yolu ne kadar benimsenir bilmiyorum ama pratikleri içselleştirmek konusunda bildiğim en doğru mindset/düşünce yapısı.
+90’larda büyüyen neslin “ustaya” daha fazla saygı duyması, ancak cep
+telefonlarının icadıyla hızlanan yaşamımız, hayat kaygılarımız, internet’in
+yaygın kullanımı bilginin kişilerin tekelinde olmaması gibi etkenlerin tümü
+toplanarak bize ve bizden sonraki nesillere “aceleci” bir dünyayı empoze etti.
+Bu nedenle “Shu Ha Ri”nin önerdiği ustalaşma yolu ne kadar benimsenir bilmiyorum
+ama pratikleri içselleştirmek konusunda bildiğim en doğru mindset/düşünce
+yapısı.
 
 Kalın sağlıcakla,
